Edit index.html and edit recipes/arepa.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/arepa.html">Homemade Arepas</a>
+        <a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a>
+        <a href="" alt="" ></a>
+        <a href="" alt="" ></a>
     </body>
 </html>
