--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a>
-        <a href="" alt="" ></a>
-        <a href="" alt="" ></a>
+        <a href="" alt="French Toast" >French Toast</a>
+        <a href="" alt="Waffles" >Waffles</a>
     </body>
 </html>
