index.html recipes/frenchtoast.html recipes/waffles.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a>
         <br>
-        <a href="" alt="French Toast" >French Toast</a>
+        <a href="recipes/frenchtoast.html" alt="French Toast" >French Toast</a>
         <br>
-        <a href="" alt="Waffles" >Waffles</a>
+        <a href="recipes/waffles.html" alt="Waffles" >Waffles</a>
     </body>
 </html>
