--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a>
-        <br>
-        <a href="recipes/frenchtoast.html" alt="French Toast" >French Toast</a>
-        <br>
-        <a href="recipes/waffles.html" alt="Waffles" >Waffles</a>
+        <ul>
+            <li><a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a></li>
+            <li><a href="recipes/frenchtoast.html" alt="French Toast" >French Toast</a></li>
+            <li><a href="recipes/waffles.html" alt="Waffles" >Waffles</a></li>
+        </ul>
     </body>
 </html>
