--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/arepa.html" alt="Homemade Arepas" >Homemade Arepas</a></li>
-            <li><a href="recipes/frenchtoast.html" alt="French Toast" >French Toast</a></li>
-            <li><a href="recipes/waffles.html" alt="Waffles" >Waffles</a></li>
+            <li><a href="recipes/arepa.html" alt="Homemade Arepas" target="_blank" >Homemade Arepas</a></li>
+            <li><a href="recipes/frenchtoast.html" alt="French Toast" target="_blank" >French Toast</a></li>
+            <li><a href="recipes/waffles.html" alt="Waffles" target="_blank" >Waffles</a></li>
         </ul>
     </body>
 </html>
