--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8">
     <head>
         <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/arepa.html" alt="Homemade Arepas" target="_blank" >Homemade Arepas</a></li>
-            <li><a href="recipes/frenchtoast.html" alt="French Toast" target="_blank" >French Toast</a></li>
+            <li><a id="arepa" href="recipes/arepa.html" alt="Homemade Arepas" target="_blank" >Homemade Arepas</a></li>
+            <li><a class="tostada" href="recipes/frenchtoast.html" alt="French Toast" target="_blank" >French Toast</a></li>
             <li><a href="recipes/waffles.html" alt="Waffles" target="_blank" >Waffles</a></li>
         </ul>
     </body>
